--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ ansi_term = "0.12.1"
 clap = { version = "4.0.19", features = ["derive"] }
 phf = { version = "0.11", features = ["macros"] }
 libc = "0.2.137"
+colorsys = "0.6.6"
 # anyhow = "1.0.66"
